--- a/Cafeteira/nbproject/project.properties
+++ b/Cafeteira/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Cafeteira
-main.class=
+main.class=TesteLeitura
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
